Updated the makefile for the menu and textview gtk examples.

--- a/Gtk/Examples/Makefile
+++ b/Gtk/Examples/Makefile
@@ -1,15 +1,33 @@
+#
+# Author: Aldanis Vigo
+# Description:
+# Makefile for GTK Examples
+#
 CC = gcc
-PKGCONFIGCFLAGS = `pkg-config --cflags gtk+-3.0`
-PKGCONFIGLIBS = `pkg-config --libs gtk+-3.0`
-TARGET = menu textview
+CFLAGS += -g -Wall -Wextra $(shell pkg-config --cflags gtk+-3.0)
+LDFLAGS += $(shell pkg-config --libs gtk+-3.0)
 
-all: $(TARGET).c
-	gcc $(PKGCONFIGCFLAGS) $(TARGET).c -o $(TARGET).exe $(PKGCONFIGLIBS)
+all: menu_example textview_example 
 
-clean: $(TARGET).exe
-	rm $(TARGET).exe
+menu_example: menu.c
+	$(CC) $(CFLAGS) menu.c -o menu.exe $(LDFLAGS)
 
-run: $(TARGET).exe
-	./$(TARGET).exe
+clean_menu_example: menu.exe
+	rm menu.exe menu.o
+	
+textview_example: textview.c
+	$(CC) $(CFLAGS) textview.c -o textview.exe $(LDFLAGS)
+
+clean_textview_example:
+	rm textview.exe textview.o
+	
+run_menu_example: menu.exe
+	./menu.exe
+	
+run_textview_example: textview.exe
+	./textview.exe
+
+run_all: menu.exe textview.exe
+	./menu.exe;./textview.exe
 	
 	
